--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
 			<div class="col-md-6">
 				<div class="row">
 					<h2>Other.</h2>
-					<p class="text-start">You can email me at <a href=mailto:steve.munson@gmail.com">steve.munson@gmail.com</a>. You can encrypt it with my <a href="steve_munson_public_key.txt">public pgp key</a>.
+					<p class="text-start">You can email me at <a href=mailto:steve.munson@gmail.com">steve.munson@gmail.com</a>.
 				</div>
 			</div>
 			<div class="col-md-3"></div>
