Changed tinker text

--- a/index.html
+++ b/index.html
@@ -47,9 +47,7 @@
 				</div>
 				<div class="row tooltip-buttons">
 					<h2>Play.</h2>
-					<p class="text-start">I like board games, simulator-style video games, escape rooms, electronic hobbying, amateur radio, and binge-watching Netflix series. 
-						I actually enjoy technology. It's not just a career. I have a room set up as a dedicated tinker space.
-					</p>
+					<p class="text-start">I like board games, simulator-style video games, escape rooms, electronic hobbying, amateur radio, and binge-watching Netflix series.</p>
 				</div>
 			</div>
 			<div class="col-md-3"></div>
