--- a/index.html
+++ b/index.html
@@ -46,20 +46,12 @@
 						I have taught IT as a university professor and a CompTIA A+ instructor.</p>
 				</div>
 				<div class="row tooltip-buttons">
-					<h2>Play.</h2>
+					<h2>Other.</h2>
 					<p class="text-start">I like board games, simulator-style video games, escape rooms, electronic hobbying, amateur radio, and binge-watching Netflix series.</p>
 				</div>
-			</div>
-			<div class="col-md-3"></div>
-		</div>
-
-		<!-- Other -->
-		<div class="row justify-content-center">
-			<div class="col-md-3"></div>
-			<div class="col-md-6">
-				<div class="row">
-					<h2>Other.</h2>
-					<p class="text-start">You can email me at <a href=mailto:steve.munson@gmail.com">steve.munson@gmail.com</a>.
+				<div class="row tooltip-buttons">
+					<h2>Play.</h2>
+					<p class="text-start">You can email me at <a href=mailto:steve.munson@gmail.com">steve.munson@gmail.com</a>.</p>
 				</div>
 			</div>
 			<div class="col-md-3"></div>
