--- a/index.html
+++ b/index.html
@@ -1,68 +1,190 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-	<title>Steve Munson</title>
-	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-	<link href="style.css" rel="stylesheet" />
-	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-	<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
-	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
-	    <!-- Required meta tags -->
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-	<link rel="preconnect" href="https://fonts.googleapis.com">
-	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-	<link href="https://fonts.googleapis.com/css2?family=Ubuntu:wght@300&display=swap" rel="stylesheet">
-    <!-- Bootstrap CSS -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-
-</head>
-<body>
-	<div class="container-fluid">
-		<!-- Name and social media row -->
-		<div class="row align-items-center">
-			<div class="col-md-3"></div>
-			<div class="col-6 col-md-3">
-				<h1>Steve Munson</h1>
-			</div>
-			<div class="col-6 col-md-3 align-self-center">
-				<a href="https://www.linkedin.com/in/scmunson/" target="_blank" rel="noopener noreferrer"><img src="images/linkedin-bw.png" class="sm-icon-right" style="margin:0px 5px" height="30px"/></a>
-				<a href="https://twitter.com/steve_munson" target="_blank" rel="noopener noreferrer">		<img src="images/twitter-bw.png"  class="sm-icon-right" style="margin:0px 5px" height="30px"/></a>
-			</div>
-			<div class="col-md-3"></div>
-		</div>
-		
-		<!-- Pic, work, play -->
-		<div class="row justify-content-center">
-			<div class="col-md-3"></div>
-			<div class="col-md-3">
-				<img src="images/SM-Profile.png" class="img-fluid" alt="Profile picture"/>
-			</div>
-			<div class="col-md-3">
-				<div class="row tooltip-buttons">
-					<h2>Work.</h2>
-					<p class="text-start">I served in the United States Air Force all over the world as a mainframe technician, a technical trainer, and a network engineer. 
-						I also worked in the commercial world as an IT manager in charge of desktop computers, PBX systems, and network infrastructure. 
-						I have taught IT as a university professor and a CompTIA A+ instructor.</p>
-				</div>
-				<div class="row tooltip-buttons">
-					<h2>Play.</h2>
-					<p class="text-start">I like board games, simulator-style video games, escape rooms, electronic hobbying, amateur radio, and binge-watching Netflix series.</p>
-				</div>
-				<div class="row tooltip-buttons">
-					<h2>Other.</h2>
-					<p class="text-start">You can email me at <a href=mailto:steve.munson@gmail.com">steve.munson@gmail.com</a>.</p>
-				</div>
-			</div>
-			<div class="col-md-3"></div>
-		</div>
-	</div>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
-	<script>
-		$(document).ready(function(){
-			$('.tip').tooltip(); 
-		});
-	</script>
-</body>
+    <head>
+        <meta charset="utf-8" />
+        <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
+        <meta name="description" content="" />
+        <meta name="author" content="" />
+        <title>Steve Munson</title>
+        <link rel="icon" type="image/x-icon" href="assets/img/favicon.ico" />
+        <!-- Font Awesome icons (free version)-->
+        <script src="https://use.fontawesome.com/releases/v6.1.0/js/all.js" crossorigin="anonymous"></script>
+        <!-- Google fonts-->
+        <link href="https://fonts.googleapis.com/css?family=Saira+Extra+Condensed:500,700" rel="stylesheet" type="text/css" />
+        <link href="https://fonts.googleapis.com/css?family=Muli:400,400i,800,800i" rel="stylesheet" type="text/css" />
+        <!-- Core theme CSS (includes Bootstrap)-->
+        <link href="css/styles.css" rel="stylesheet" />
+    </head>
+    <body id="page-top">
+        <!-- Navigation-->
+        <nav class="navbar navbar-expand-lg navbar-dark bg-primary fixed-top" id="sideNav">
+            <a class="navbar-brand js-scroll-trigger" href="#page-top">
+                <span class="d-block d-lg-none">Steve Munson</span>
+                <span class="d-none d-lg-block"><img class="img-fluid img-profile rounded-circle mx-auto mb-2" src="assets/img/profile.png" alt="..." /></span>
+            </a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
+            <div class="collapse navbar-collapse" id="navbarResponsive">
+                <ul class="navbar-nav">
+                    <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#about">About</a></li>
+                    <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#experience">Experience</a></li>
+                    <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#education">Education</a></li>
+                    <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#skills">Skills</a></li>
+                    <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#interests">Interests</a></li>
+                    <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#Certifications">Certifications</a></li>
+                </ul>
+            </div>
+        </nav>
+        <!-- Page Content-->
+        <div class="container-fluid p-0">
+            <!-- About-->
+            <section class="resume-section" id="about">
+                <div class="resume-section-content">
+                    <h1 class="mb-0">
+                        Steve
+                        <span class="text-primary">Munson</span>
+                    </h1>
+                    <div class="subheading mb-5">
+                        Cincinnati, OH · 863-602-3690 · <a href="mailto:name@email.com">steve.munson@gmail.com</a>
+                    </div>
+                    <p class="lead mb-5">I am an IT professional and technical trainer with decades of experience. I served in the United States Air Force for 20 years and understand the challenges of network installations in a variety of environments.</p>
+                    <div class="social-icons">
+                        <a class="social-icon" href="https://www.linkedin.com/in/scmunson/"><i class="fab fa-linkedin-in"></i></a>
+                        <a class="social-icon" href="https://github.com/SteveMunson/"><i class="fab fa-github"></i></a>
+                        <a class="social-icon" href="https://twitter.com/steve_munson"><i class="fab fa-twitter"></i></a>
+                    </div>
+                </div>
+            </section>
+            <hr class="m-0" />
+            <!-- Experience-->
+            <section class="resume-section" id="experience">
+                <div class="resume-section-content container-fluid row">
+                    <h2 class="mb-5">Experience</h2>
+						<div class="row">
+							<div class="col">
+								<h3 class="mb-4 area">Technical</h3>
+								<h3 class="mb-0">IT Infrastructure Manager</h3>
+								<div class="subheading mb-2">Great American Insurance Group</div>
+								<p>Managed hardware, telephone, wired & wireless network infrastructure, and associated technicians at corporate and regional offices in three states. Planned and implemented technology initiatives to meet business needs and improve service.</p>
+								<h3 class="mb-0">Joint Communications Data Planner</h3>
+								<div class="subheading mb-2">United States Air Force</div>
+								<p>Provided command, control, communications, computer, and intelligence (C4I) engineering and planning support to unified commands worldwide. Planned, coordinated, and engineered C4I support to rapidly deployable coalition and joint task force and joint special operations task force headquarters supporting contingencies and joint readiness exercises. </p>
+								<h3 class="mb-0">Superintendent, Computer & Network Systems</h3>
+								<div class="subheading mb-2">United States Air Force</div>
+								<p>Directed the operations of a 13-person work center with assets totaling over $2,000,000. Designed, installed, and maintained all computer systems supporting a 12,000-square mile test range for developmental and operational testing of the nation's highest priority weapons systems. </p>
+							</div>
+						<div class="col">
+							<h3 class="mb-4 area">Training</h3>
+                            <h3 class="mb-0">Technical Instructor</h3>
+                            <div class="subheading mb-2">Kingsborough Community College/City University of New York</div>
+                            <p>Designed the CompTIA A+ Certification course and taught the inaugural class of 28 students sponsored through the U.S. Department of Labor's Strengthening Community Colleges Training Grants Program.</p>
+                            <h3 class="mb-0">Technical Instructor</h3>
+                            <div class="subheading mb-2">Keiser University</div>
+                            <p>Taught Essentials of Networking, Internetworking Technologies, Manage & Maintain Server Operating Systems, PC Service and Support I & II, and Supporting Client Operating Systems.</p>
+                        </div>
+                    </div>
+                </div>
+            </section>
+            <hr class="m-0" />
+            <!-- Education-->
+            <section class="resume-section" id="education">
+                <div class="resume-section-content">
+                    <h2 class="mb-5">Education</h2>
+                    <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
+                        <div class="flex-grow-1">
+                            <h3 class="mb-0">Keiser University</h3>
+                            <div class="subheading mb-2">Master of Science</div>
+                            <div>Information Security</div>
+                        </div>
+                    </div>
+                    <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
+                        <div class="flex-grow-1">
+                            <h3 class="mb-0">Keiser University</h3>
+                            <div class="subheading mb-2">Bachelor of Science</div>
+                            <div>Network Systems and Data Communications</div>
+                        </div>
+                    </div>
+                    <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
+                        <div class="flex-grow-1">
+                            <h3 class="mb-0">Community College of the Air Force</h3>
+                            <div class="subheading mb-2">Associate of Science</div>
+                            <div>Electronic Systems Technology</div>
+                        </div>
+                    </div>
+                    <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
+                        <div class="flex-grow-1">
+                            <h3 class="mb-0">Community College of the Air Force</h3>
+                            <div class="subheading mb-2">Associate of Science</div>
+                            <div>Instructor of Military Science</div>
+                        </div>
+                    </div>
+                </div>
+            </section>
+            <hr class="m-0" />
+            <!-- Skills-->
+            <section class="resume-section" id="skills">
+                <div class="resume-section-content">
+                    <h2 class="mb-5">Skills</h2>
+                    <ul class="fa-ul mb-0">
+                        <li>
+                            <span class="fa-li"><i class="fas fa-check"></i></span>
+                            Google IT Automation with Python Professional
+                        </li>
+                        <li>
+                            <span class="fa-li"><i class="fas fa-check"></i></span>
+							Cisco DevNet Associate
+						</li>
+                        <li>
+                            <span class="fa-li"><i class="fas fa-check"></i></span>
+                            Cisco Networking Academy Instructor
+                        </li>
+                        <li>
+                            <span class="fa-li"><i class="fas fa-check"></i></span>
+							IT Essentials: PC Hardware and Software
+						</li>
+                        <li>
+                            <span class="fa-li"><i class="fas fa-check"></i></span>
+							CCNA R&S: Introduction to Networks
+						</li>
+                        <li>
+                            <span class="fa-li"><i class="fas fa-check"></i></span>
+                            CCNA R&S: Routing and Switching Essentials 
+                        </li>
+                        <li>
+                            <span class="fa-li"><i class="fas fa-check"></i></span>
+							CCNAv7: Enterprise Networking, Security, and Automation
+						</li>
+					</ul>
+                </div>
+            </section>
+            <hr class="m-0" />
+            <!-- Interests-->
+            <section class="resume-section" id="interests">
+                <div class="resume-section-content">
+                    <h2 class="mb-5">Interests</h2>
+                    <p>I like hiking, board games, simulator-style video games, escape rooms, electronic hobbying, amateur radio, and binge-watching Netflix series.</p>
+                </div>
+            </section>
+            <hr class="m-0" />
+            <!-- Awards-->
+            <section class="resume-section" id="Certifications">
+                <div class="resume-section-content">
+                    <h2 class="mb-5">Certifications</h2>
+                    <ul class="fa-ul mb-0">
+                        <li>
+                            <span class="fa-li"><i class="fas fa-asterisk text-bullet"></i></span>
+                            Cisco Certified Network Associate
+                        </li>
+                        <li>
+                            <span class="fa-li"><i class="fas fa-asterisk text-bullet"></i></span>
+                            CompTIA Network+
+                        </li>
+                    </ul>
+                </div>
+            </section>
+        </div>
+        <!-- Bootstrap core JS-->
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
+        <!-- Core theme JS-->
+        <script src="js/scripts.js"></script>
+    </body>
 </html>
-
