Adjust col for smaller screens

--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
                 <div class="resume-section-content container-fluid row">
                     <h2 class="mb-5">Experience</h2>
 						<div class="row">
-							<div class="col">
+							<div class="col-md">
 								<h3 class="mb-4 area">Technical</h3>
 								<h3 class="mb-0">IT Infrastructure Manager</h3>
 								<div class="subheading mb-2">Great American Insurance Group</div>
@@ -72,7 +72,7 @@
 								<div class="subheading mb-2">United States Air Force</div>
 								<p>Directed the operations of a 13-person work center with assets totaling over $2,000,000. Designed, installed, and maintained all computer systems supporting a 12,000-square mile test range for developmental and operational testing of the nation's highest priority weapons systems. </p>
 							</div>
-						<div class="col">
+						<div class="col-md">
 							<h3 class="mb-4 area">Training</h3>
                             <h3 class="mb-0">Technical Instructor</h3>
                             <div class="subheading mb-2">Kingsborough Community College/City University of New York</div>
