Change bullt icon. Spelling.

--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
 								<h3 class="mb-4 area">Technical</h3>
 								<h3 class="mb-0">IT Infrastructure Manager</h3>
 								<div class="subheading mb-2">Great American Insurance Group</div>
-								<p>Managed hardware, telephone, wired & wireless network infrastructure, and associated technicians at corporate and regional offices in three states. Planned and implemented technology initiatives to meet business needs and improve service.</p>
+								<p>Managed hardware, telephone, wired & wireless network infrastructure, and associated technicians at corporate and regional offices in three states. Planned and implemented technology initiatives to meet business needs and improve services.</p>
 								<h3 class="mb-0">Joint Communications Data Planner</h3>
 								<div class="subheading mb-2">United States Air Force</div>
 								<p>Provided command, control, communications, computer, and intelligence (C4I) engineering and planning support to unified commands worldwide. Planned, coordinated, and engineered C4I support to rapidly deployable coalition and joint task force and joint special operations task force headquarters supporting contingencies and joint readiness exercises. </p>
@@ -126,31 +126,31 @@
                     <h2 class="mb-5">Skills</h2>
                     <ul class="fa-ul mb-0">
                         <li>
-                            <span class="fa-li"><i class="fas fa-check"></i></span>
+                            <span class="fa-li"><i class="fas fa-check text-bullet"></i></span>
                             Google IT Automation with Python Professional
                         </li>
                         <li>
-                            <span class="fa-li"><i class="fas fa-check"></i></span>
+                            <span class="fa-li"><i class="fas fa-check text-bullet"></i></span>
 							Cisco DevNet Associate
 						</li>
                         <li>
-                            <span class="fa-li"><i class="fas fa-check"></i></span>
+                            <span class="fa-li"><i class="fas fa-check text-bullet"></i></span>
                             Cisco Networking Academy Instructor
                         </li>
                         <li>
-                            <span class="fa-li"><i class="fas fa-check"></i></span>
+                            <span class="fa-li"><i class="fas fa-check text-bullet"></i></span>
 							IT Essentials: PC Hardware and Software
 						</li>
                         <li>
-                            <span class="fa-li"><i class="fas fa-check"></i></span>
+                            <span class="fa-li"><i class="fas fa-check text-bullet"></i></span>
 							CCNA R&S: Introduction to Networks
 						</li>
                         <li>
-                            <span class="fa-li"><i class="fas fa-check"></i></span>
+                            <span class="fa-li"><i class="fas fa-check text-bullet"></i></span>
                             CCNA R&S: Routing and Switching Essentials 
                         </li>
                         <li>
-                            <span class="fa-li"><i class="fas fa-check"></i></span>
+                            <span class="fa-li"><i class="fas fa-check text-bullet"></i></span>
 							CCNAv7: Enterprise Networking, Security, and Automation
 						</li>
 					</ul>
@@ -171,11 +171,11 @@
                     <h2 class="mb-5">Certifications</h2>
                     <ul class="fa-ul mb-0">
                         <li>
-                            <span class="fa-li"><i class="fas fa-asterisk text-bullet"></i></span>
+                            <span class="fa-li"><i class="fas fa-check text-bullet"></i></span>
                             Cisco Certified Network Associate
                         </li>
                         <li>
-                            <span class="fa-li"><i class="fas fa-asterisk text-bullet"></i></span>
+                            <span class="fa-li"><i class="fas fa-check text-bullet"></i></span>
                             CompTIA Network+
                         </li>
                     </ul>
