--- a/index.html
+++ b/index.html
@@ -1,4 +1,7 @@
 <html>
+    <head>
+        <link rel="stylesheet" href="css/styles.css">
+    </head>
     <body>
         <p>"Hello World, eh?"</p>
     </body>
