--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
         <link rel="stylesheet" href="css/styles.css">
     </head>
     <body>
+        <h1>Header 1</h1>
+        <h2>Header 2</h2>
         <p>"Hello World, eh?"</p>
     </body>
 </html>
